// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemWrapper.svelte > should handle change for removable property 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
       
      <p>
        hello
      </p>
      <!---->
      <!---->
    </item>
     
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should handle change for removable property 2`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
       
      <p>
        hello
      </p>
      <!---->
      <!---->
    </item>
     
    <rkt-icon
      aria-label="Remove"
      class="flex flex-shrink-0 items-center justify-center small"
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="action-remove"
      />
    </rkt-icon>
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should handle value change 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
       
      <p>
        hello
      </p>
      <!---->
      <!---->
    </item>
     
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
       
      <p>
        hello
      </p>
      <!---->
      <!---->
    </item>
     
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render custom component 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <span>
        Test
      </span>
      <!---->
    </item>
     
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render object 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
      <!---->
      
      
      <!---->
       
      <p>
        Test
      </p>
      <!---->
      <!---->
    </item>
     
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render object configured component 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <span>
        Test
      </span>
      <!---->
    </item>
     
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render removable with custom class 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center pill"
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
       
      <p>
        Test
      </p>
      <!---->
      <!---->
    </item>
     
    <rkt-icon
      aria-label="Remove"
      class="flex flex-shrink-0 items-center justify-center small"
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="action-remove"
      />
    </rkt-icon>
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render removable with custom icon 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
      <!---->
      
      
      <!---->
       
      <p>
        Test
      </p>
      <!---->
      <!---->
    </item>
     
    <rkt-icon
      aria-label="Remove"
      class="flex flex-shrink-0 items-center justify-center small"
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="close"
      />
    </rkt-icon>
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render removable with default icon when null 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
      <!---->
      
      
      <!---->
       
      <p>
        Test
      </p>
      <!---->
      <!---->
    </item>
     
    <rkt-icon
      aria-label="Remove"
      class="flex flex-shrink-0 items-center justify-center small"
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="action-remove"
      />
    </rkt-icon>
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render removable with default icon when null 2`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
      <!---->
      
      
      <!---->
       
      <p>
        Test
      </p>
      <!---->
      <!---->
    </item>
     
    <rkt-icon
      aria-label="Remove"
      class="flex flex-shrink-0 items-center justify-center small"
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="close"
      />
    </rkt-icon>
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render using field mapping 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
      <rkt-icon
        aria-label="info"
        class="flex flex-shrink-0 items-center justify-center "
        role="img"
        tabindex="-1"
      >
        <i
          aria-hidden="true"
          class="info"
        />
      </rkt-icon>
      
      <!---->
       
      <p>
        hello
      </p>
      <!---->
      <!---->
    </item>
     
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render with custom class 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center pill"
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
       
      <p>
        Test
      </p>
      <!---->
      <!---->
    </item>
     
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render with removable prop 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
       
      <p>
        Test
      </p>
      <!---->
      <!---->
    </item>
     
    <rkt-icon
      aria-label="Remove"
      class="flex flex-shrink-0 items-center justify-center small"
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="action-remove"
      />
    </rkt-icon>
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should render with selected prop 1`] = `
<div>
  <wrap-item
    aria-selected="true"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
       
      <p>
        Test
      </p>
      <!---->
      <!---->
    </item>
     
    <!---->
  </wrap-item>
  
</div>
`;

exports[`ItemWrapper.svelte > should update when value changes 1`] = `
<div>
  <wrap-item
    aria-selected="false"
    class="flex flex-row items-center "
    role="option"
  >
    <item
      class="flex flex-row items-center"
    >
      <!---->
      <!---->
      <!---->
      
      
      <!---->
       
      <p>
        hello
      </p>
      <!---->
      <!---->
    </item>
     
    <!---->
  </wrap-item>
  
</div>
`;
